--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Parity Technologies <admin@parity.io>"]
 
 [dependencies]
 elastic-array = "0.10"
-ethereum-types = "0.3"
+#ethereum-types = "0.3"
+ethereum-types = { git = "https://github.com/chainx-org/primitives" }
 rustc-hex = "1.0"
 byteorder = "1.0"
